<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center" xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin">
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/host"
        android:layout_margin="@dimen/margin"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:text="@string/player1"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/nick1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:text="@string/rate"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/rate1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"/>

    </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:enabled="false"
                android:background="@color/black"
                android:text="@string/start"
                android:id="@+id/start"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />
        </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkgrey"
        android:layout_margin="@dimen/margin"/>
    <com.google.android.material.card.MaterialCardView
        android:visibility="invisible"
        android:id="@+id/guest"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin">
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_margin="@dimen/margin"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/player2"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/nick2"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/rate"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/rate2"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:layout_width="wrap_content"
                    android:background="@color/black"
                    android:textAllCaps="false"
                    android:text="@string/ready"
                    android:id="@+id/ready"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>