<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            >
<LinearLayout
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
    android:padding="20dp">
    <TextView
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/s20"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/s11"/>
    <Spinner
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spin">
    </Spinner>
</LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/grey"
        />
    <TextView
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/s21"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/s22"/>
    <ScrollView
                 android:id="@+id/scroll"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
    <HorizontalScrollView
        android:id="@+id/hscroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/blue"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="10dp"
                android:tag="blue"
                android:onClick="podsv">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue"></View>
            </LinearLayout>
        <LinearLayout
            android:id="@+id/red"
            android:tag="red"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:onClick="podsv"
            android:padding="10dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/red"></View>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/yellow"
            android:tag="yellow"
            android:onClick="podsv"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:padding="10dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/yellow"></View>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/green"
            android:tag="green"
            android:onClick="podsv"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:padding="10dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/green"></View>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/purple"
            android:tag="purple"
            android:onClick="podsv"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:padding="10dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple"></View>
        </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</ScrollView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        />
    <TextView
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/s23"/>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/back1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="10dp"
                    android:tag="back1"
                    android:onClick="fon">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/back1"></View>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/back2"
                    android:tag="back2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:onClick="fon"
                    android:padding="10dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/back2"></View>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/back3"
                    android:tag="back3"
                    android:onClick="fon"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="10dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/back3"></View>
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        />
    <Button
        android:onClick="apply"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s13"
        android:textAllCaps="false"
        android:textSize="18sp"/>
</LinearLayout>
</ScrollView>